// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`radioGroup组件 快照测试 基本使用 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 > label {
  padding-right: 8px;
}

.c0 > label:last-child {
  padding-right: 0px;
}

.c0 > label {
  -webkit-transform: translate(-11px,0px);
  -ms-transform: translate(-11px,0px);
  transform: translate(-11px,0px);
}

.c1 {
  font-size: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  font-weight: 400;
  color: rgba(0,0,0,0.87);
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
  box-sizing: border-box;
  cursor: pointer;
}

.c1 > .sinoui-checkbox,
.c1 > .sinoui-radio {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c1 > .sinoui-form-control-label__title {
  word-break: break-all;
  word-wrap: break-word;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 1.5;
  padding: 4px 0px;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0px;
  padding: 0px;
  margin: 0;
  border-radius: 0;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  pointer-events: default;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2::-moz-focus-inner {
  border-style: none;
}

.c2:hover {
  background-color: rgba(0,0,0,0.04);
}

.c4 {
  font-size: 24px;
  width: 1em;
  height: 1em;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
}

.c3 {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  color: rgba(0,0,0,0.6);
}

.c3 > .sinoui-icon,
.c3 > .sinoui-svg-icon {
  font-size: 20px;
}

.c3.sinoui-radio--disabled {
  color: rgba(0,0,0,0.38);
}

.c3.sinoui-radio--readOnly {
  color: rgba(0,0,0,0.38);
}

.c3 .sinoui-radio__ripple {
  width: 40px;
  height: 40px;
  border-radius: 50%;
}

.c3 .sinoui-radio__ripple-layout {
  width: 40px;
  height: 40px;
}

.c3:hover {
  background-color: rgba(0,0,0,0.04);
}

.c3:focus {
  background-color: rgba(63,81,181,0.04);
}

.c3.sinoui-radio--dense {
  height: 32px;
  width: 32px;
}

.c3.sinoui-radio--dense .sinoui-radio__ripple {
  width: 32px;
  height: 32px;
  border-radius: 50%;
}

.c3.sinoui-radio--dense .sinoui-radio__ripple-layout {
  width: 32px;
  height: 32px;
}

.c6 {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  color: #3f51b5;
}

.c6 > .sinoui-icon,
.c6 > .sinoui-svg-icon {
  font-size: 20px;
}

.c6.sinoui-radio--disabled {
  color: rgba(0,0,0,0.38);
}

.c6.sinoui-radio--readOnly {
  color: rgba(0,0,0,0.38);
}

.c6 .sinoui-radio__ripple {
  width: 40px;
  height: 40px;
  border-radius: 50%;
}

.c6 .sinoui-radio__ripple-layout {
  width: 40px;
  height: 40px;
}

.c6:hover {
  background-color: rgba(63,81,181,0.04);
}

.c6:focus {
  background-color: rgba(63,81,181,0.04);
}

.c6.sinoui-radio--dense {
  height: 32px;
  width: 32px;
}

.c6.sinoui-radio--dense .sinoui-radio__ripple {
  width: 32px;
  height: 32px;
  border-radius: 50%;
}

.c6.sinoui-radio--dense .sinoui-radio__ripple-layout {
  width: 32px;
  height: 32px;
}

.c5 {
  cursor: inherit;
  position: absolute;
  opacity: 0;
  width: 100%;
  height: 100%;
  top: 0px;
  left: 0px;
  margin: 0px;
  padding: 0px;
  border: none;
}

@media (hover:none) {
  .c2:hover {
    background-color: transparent;
  }
}

@media (hover:none) {
  .c3:hover {
    background-color: transparent;
  }
}

@media (hover:none) {
  .c6:hover {
    background-color: transparent;
  }
}

<div
  className="c0 sinoui-checkbox-group sinoui-form-group"
  onChange={[Function]}
>
  <label
    className="sc-AxgMl c1 sinoui-form-control-label"
  >
    <span
      checked={false}
      className="c2 sinoui-base-button c3 sinoui-radio"
      color="primary"
      onClick={[Function]}
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="c4 sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        checked={false}
        className="c5 sinoui-radio__input"
        onChange={[Function]}
        type="radio"
        value="1"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框1
    </span>
  </label>
  <label
    className="sc-AxgMl c1 sinoui-form-control-label"
  >
    <span
      checked={false}
      className="c2 sinoui-base-button c3 sinoui-radio"
      color="primary"
      onClick={[Function]}
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="c4 sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        checked={false}
        className="c5 sinoui-radio__input"
        onChange={[Function]}
        type="radio"
        value="2"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框2
    </span>
  </label>
  <label
    className="sc-AxgMl c1 sinoui-form-control-label"
  >
    <span
      checked={true}
      className="c2 sinoui-base-button c6 sinoui-radio sinoui-radio--checked"
      color="primary"
      onClick={[Function]}
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="c4 sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        checked={true}
        className="c5 sinoui-radio__input"
        onChange={[Function]}
        type="radio"
        value="3"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框3
    </span>
  </label>
  <label
    className="sc-AxgMl c1 sinoui-form-control-label"
  >
    <span
      checked={false}
      className="c2 sinoui-base-button c3 sinoui-radio"
      color="primary"
      onClick={[Function]}
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="c4 sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        checked={false}
        className="c5 sinoui-radio__input"
        onChange={[Function]}
        type="radio"
        value="4"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框4
    </span>
  </label>
</div>
`;

exports[`radioGroup组件 快照测试 设置只读 1`] = `
Array [
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 > label {
  padding-right: 8px;
}

.c0 > label:last-child {
  padding-right: 0px;
}

.c0 > label {
  -webkit-transform: translate(-11px,0px);
  -ms-transform: translate(-11px,0px);
  transform: translate(-11px,0px);
}

.c1 {
  font-size: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  font-weight: 400;
  color: rgba(0,0,0,0.87);
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
  box-sizing: border-box;
  cursor: default;
}

.c1 > .sinoui-checkbox,
.c1 > .sinoui-radio {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c1 > .sinoui-form-control-label__title {
  word-break: break-all;
  word-wrap: break-word;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 1.5;
  padding: 4px 0px;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0px;
  padding: 0px;
  margin: 0;
  border-radius: 0;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  pointer-events: none;
  cursor: default;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2::-moz-focus-inner {
  border-style: none;
}

.c2:hover {
  background-color: rgba(0,0,0,0.04);
}

.c4 {
  font-size: 24px;
  width: 1em;
  height: 1em;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
}

.c3 {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  color: rgba(0,0,0,0.6);
}

.c3 > .sinoui-icon,
.c3 > .sinoui-svg-icon {
  font-size: 20px;
}

.c3.sinoui-radio--disabled {
  color: rgba(0,0,0,0.38);
}

.c3.sinoui-radio--readOnly {
  color: rgba(0,0,0,0.38);
}

.c3 .sinoui-radio__ripple {
  width: 40px;
  height: 40px;
  border-radius: 50%;
}

.c3 .sinoui-radio__ripple-layout {
  width: 40px;
  height: 40px;
}

.c3:hover {
  background-color: rgba(0,0,0,0.04);
}

.c3:focus {
  background-color: rgba(63,81,181,0.04);
}

.c3.sinoui-radio--dense {
  height: 32px;
  width: 32px;
}

.c3.sinoui-radio--dense .sinoui-radio__ripple {
  width: 32px;
  height: 32px;
  border-radius: 50%;
}

.c3.sinoui-radio--dense .sinoui-radio__ripple-layout {
  width: 32px;
  height: 32px;
}

.c5 {
  cursor: inherit;
  position: absolute;
  opacity: 0;
  width: 100%;
  height: 100%;
  top: 0px;
  left: 0px;
  margin: 0px;
  padding: 0px;
  border: none;
}

@media (hover:none) {
  .c2:hover {
    background-color: transparent;
  }
}

@media (hover:none) {
  .c3:hover {
    background-color: transparent;
  }
}

<div
    className="c0 sinoui-checkbox-group sinoui-form-group"
    onChange={[Function]}
  >
    <label
      className="sc-AxgMl c1 sinoui-form-control-label"
      disabled={true}
    >
      <span
        checked={false}
        className="c2 sinoui-base-button c3 sinoui-radio sinoui-radio--disabled"
        color="primary"
        disabled={true}
        onClick={[Function]}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="c4 sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="c5 sinoui-radio__input"
          disabled={true}
          onChange={[Function]}
          type="radio"
          value="1"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框1
      </span>
    </label>
    <label
      className="sc-AxgMl c1 sinoui-form-control-label"
      disabled={true}
    >
      <span
        checked={false}
        className="c2 sinoui-base-button c3 sinoui-radio sinoui-radio--disabled"
        color="primary"
        disabled={true}
        onClick={[Function]}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="c4 sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="c5 sinoui-radio__input"
          disabled={true}
          onChange={[Function]}
          type="radio"
          value="2"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框2
      </span>
    </label>
    <label
      className="sc-AxgMl c1 sinoui-form-control-label"
      disabled={true}
    >
      <span
        checked={false}
        className="c2 sinoui-base-button c3 sinoui-radio sinoui-radio--disabled"
        color="primary"
        disabled={true}
        onClick={[Function]}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="c4 sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="c5 sinoui-radio__input"
          disabled={true}
          onChange={[Function]}
          type="radio"
          value="3"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框3
      </span>
    </label>
    <label
      className="sc-AxgMl c1 sinoui-form-control-label"
      disabled={true}
    >
      <span
        checked={false}
        className="c2 sinoui-base-button c3 sinoui-radio sinoui-radio--disabled"
        color="primary"
        disabled={true}
        onClick={[Function]}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="c4 sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="c5 sinoui-radio__input"
          disabled={true}
          onChange={[Function]}
          type="radio"
          value="4"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框4
      </span>
    </label>
  </div>,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 > label {
  padding-right: 8px;
}

.c0 > label:last-child {
  padding-right: 0px;
}

.c0 > label {
  -webkit-transform: translate(-11px,0px);
  -ms-transform: translate(-11px,0px);
  transform: translate(-11px,0px);
}

.c1 {
  font-size: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  font-weight: 400;
  color: rgba(0,0,0,0.87);
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
  box-sizing: border-box;
  cursor: default;
}

.c1 > .sinoui-checkbox,
.c1 > .sinoui-radio {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c1 > .sinoui-form-control-label__title {
  word-break: break-all;
  word-wrap: break-word;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 1.5;
  padding: 4px 0px;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0px;
  padding: 0px;
  margin: 0;
  border-radius: 0;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  pointer-events: none;
  cursor: default;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2::-moz-focus-inner {
  border-style: none;
}

.c2:hover {
  background-color: rgba(0,0,0,0.04);
}

.c4 {
  font-size: 24px;
  width: 1em;
  height: 1em;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
}

.c3 {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  color: rgba(0,0,0,0.6);
}

.c3 > .sinoui-icon,
.c3 > .sinoui-svg-icon {
  font-size: 20px;
}

.c3.sinoui-radio--disabled {
  color: rgba(0,0,0,0.38);
}

.c3.sinoui-radio--readOnly {
  color: rgba(0,0,0,0.38);
}

.c3 .sinoui-radio__ripple {
  width: 40px;
  height: 40px;
  border-radius: 50%;
}

.c3 .sinoui-radio__ripple-layout {
  width: 40px;
  height: 40px;
}

.c3:hover {
  background-color: rgba(0,0,0,0.04);
}

.c3:focus {
  background-color: rgba(63,81,181,0.04);
}

.c3.sinoui-radio--dense {
  height: 32px;
  width: 32px;
}

.c3.sinoui-radio--dense .sinoui-radio__ripple {
  width: 32px;
  height: 32px;
  border-radius: 50%;
}

.c3.sinoui-radio--dense .sinoui-radio__ripple-layout {
  width: 32px;
  height: 32px;
}

.c5 {
  cursor: inherit;
  position: absolute;
  opacity: 0;
  width: 100%;
  height: 100%;
  top: 0px;
  left: 0px;
  margin: 0px;
  padding: 0px;
  border: none;
}

@media (hover:none) {
  .c2:hover {
    background-color: transparent;
  }
}

@media (hover:none) {
  .c3:hover {
    background-color: transparent;
  }
}

<div
    className="c0 sinoui-checkbox-group sinoui-form-group"
    onChange={[Function]}
  >
    <label
      className="sc-AxgMl c1 sinoui-form-control-label"
      readOnly={true}
    >
      <span
        checked={false}
        className="c2 sinoui-base-button c3 sinoui-radio sinoui-radio--readOnly"
        color="primary"
        disabled={true}
        onClick={[Function]}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="c4 sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="c5 sinoui-radio__input"
          onChange={[Function]}
          readOnly={true}
          type="radio"
          value="1"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框1
      </span>
    </label>
    <label
      className="sc-AxgMl c1 sinoui-form-control-label"
      readOnly={true}
    >
      <span
        checked={false}
        className="c2 sinoui-base-button c3 sinoui-radio sinoui-radio--readOnly"
        color="primary"
        disabled={true}
        onClick={[Function]}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="c4 sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="c5 sinoui-radio__input"
          onChange={[Function]}
          readOnly={true}
          type="radio"
          value="2"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框2
      </span>
    </label>
    <label
      className="sc-AxgMl c1 sinoui-form-control-label"
      readOnly={true}
    >
      <span
        checked={false}
        className="c2 sinoui-base-button c3 sinoui-radio sinoui-radio--readOnly"
        color="primary"
        disabled={true}
        onClick={[Function]}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="c4 sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="c5 sinoui-radio__input"
          onChange={[Function]}
          readOnly={true}
          type="radio"
          value="3"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框3
      </span>
    </label>
    <label
      className="sc-AxgMl c1 sinoui-form-control-label"
      readOnly={true}
    >
      <span
        checked={false}
        className="c2 sinoui-base-button c3 sinoui-radio sinoui-radio--readOnly"
        color="primary"
        disabled={true}
        onClick={[Function]}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="c4 sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="c5 sinoui-radio__input"
          onChange={[Function]}
          readOnly={true}
          type="radio"
          value="4"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框4
      </span>
    </label>
  </div>,
]
`;

exports[`radioGroup组件 快照测试 设置标题显示位置 1`] = `
Array [
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 > label {
  padding-right: 8px;
}

.c0 > label:last-child {
  padding-right: 0px;
}

.c0 > label {
  -webkit-transform: translate(-11px,0px);
  -ms-transform: translate(-11px,0px);
  transform: translate(-11px,0px);
}

.c1 {
  font-size: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  font-weight: 400;
  color: rgba(0,0,0,0.87);
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
  box-sizing: border-box;
  cursor: pointer;
}

.c1 > .sinoui-checkbox,
.c1 > .sinoui-radio {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c1 > .sinoui-form-control-label__title {
  word-break: break-all;
  word-wrap: break-word;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 1.5;
  padding: 4px 0px;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0px;
  padding: 0px;
  margin: 0;
  border-radius: 0;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  pointer-events: default;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2::-moz-focus-inner {
  border-style: none;
}

.c2:hover {
  background-color: rgba(0,0,0,0.04);
}

.c4 {
  font-size: 24px;
  width: 1em;
  height: 1em;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
}

.c3 {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  color: rgba(0,0,0,0.6);
}

.c3 > .sinoui-icon,
.c3 > .sinoui-svg-icon {
  font-size: 20px;
}

.c3.sinoui-radio--disabled {
  color: rgba(0,0,0,0.38);
}

.c3.sinoui-radio--readOnly {
  color: rgba(0,0,0,0.38);
}

.c3 .sinoui-radio__ripple {
  width: 40px;
  height: 40px;
  border-radius: 50%;
}

.c3 .sinoui-radio__ripple-layout {
  width: 40px;
  height: 40px;
}

.c3:hover {
  background-color: rgba(0,0,0,0.04);
}

.c3:focus {
  background-color: rgba(63,81,181,0.04);
}

.c3.sinoui-radio--dense {
  height: 32px;
  width: 32px;
}

.c3.sinoui-radio--dense .sinoui-radio__ripple {
  width: 32px;
  height: 32px;
  border-radius: 50%;
}

.c3.sinoui-radio--dense .sinoui-radio__ripple-layout {
  width: 32px;
  height: 32px;
}

.c5 {
  cursor: inherit;
  position: absolute;
  opacity: 0;
  width: 100%;
  height: 100%;
  top: 0px;
  left: 0px;
  margin: 0px;
  padding: 0px;
  border: none;
}

@media (hover:none) {
  .c2:hover {
    background-color: transparent;
  }
}

@media (hover:none) {
  .c3:hover {
    background-color: transparent;
  }
}

<div
    className="c0 sinoui-checkbox-group sinoui-form-group"
    onChange={[Function]}
  >
    <label
      className="sc-AxgMl c1 sinoui-form-control-label"
    >
      <span
        checked={false}
        className="c2 sinoui-base-button c3 sinoui-radio"
        color="primary"
        onClick={[Function]}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="c4 sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="c5 sinoui-radio__input"
          onChange={[Function]}
          type="radio"
          value="1"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框1
      </span>
    </label>
    <label
      className="sc-AxgMl c1 sinoui-form-control-label"
    >
      <span
        checked={false}
        className="c2 sinoui-base-button c3 sinoui-radio"
        color="primary"
        onClick={[Function]}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="c4 sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="c5 sinoui-radio__input"
          onChange={[Function]}
          type="radio"
          value="2"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框2
      </span>
    </label>
    <label
      className="sc-AxgMl c1 sinoui-form-control-label"
    >
      <span
        checked={false}
        className="c2 sinoui-base-button c3 sinoui-radio"
        color="primary"
        onClick={[Function]}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="c4 sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="c5 sinoui-radio__input"
          onChange={[Function]}
          type="radio"
          value="3"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框3
      </span>
    </label>
  </div>,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 > label {
  padding-right: 8px;
}

.c0 > label:last-child {
  padding-right: 0px;
}

.c1 {
  font-size: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  font-weight: 400;
  color: rgba(0,0,0,0.87);
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
  box-sizing: border-box;
  cursor: pointer;
}

.c1 > .sinoui-checkbox,
.c1 > .sinoui-radio {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c1 > .sinoui-form-control-label__title {
  word-break: break-all;
  word-wrap: break-word;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 1.5;
  padding: 4px 0px;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0px;
  padding: 0px;
  margin: 0;
  border-radius: 0;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  pointer-events: default;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2::-moz-focus-inner {
  border-style: none;
}

.c2:hover {
  background-color: rgba(0,0,0,0.04);
}

.c4 {
  font-size: 24px;
  width: 1em;
  height: 1em;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
}

.c3 {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  color: rgba(0,0,0,0.6);
}

.c3 > .sinoui-icon,
.c3 > .sinoui-svg-icon {
  font-size: 20px;
}

.c3.sinoui-radio--disabled {
  color: rgba(0,0,0,0.38);
}

.c3.sinoui-radio--readOnly {
  color: rgba(0,0,0,0.38);
}

.c3 .sinoui-radio__ripple {
  width: 40px;
  height: 40px;
  border-radius: 50%;
}

.c3 .sinoui-radio__ripple-layout {
  width: 40px;
  height: 40px;
}

.c3:hover {
  background-color: rgba(0,0,0,0.04);
}

.c3:focus {
  background-color: rgba(63,81,181,0.04);
}

.c3.sinoui-radio--dense {
  height: 32px;
  width: 32px;
}

.c3.sinoui-radio--dense .sinoui-radio__ripple {
  width: 32px;
  height: 32px;
  border-radius: 50%;
}

.c3.sinoui-radio--dense .sinoui-radio__ripple-layout {
  width: 32px;
  height: 32px;
}

.c5 {
  cursor: inherit;
  position: absolute;
  opacity: 0;
  width: 100%;
  height: 100%;
  top: 0px;
  left: 0px;
  margin: 0px;
  padding: 0px;
  border: none;
}

@media (hover:none) {
  .c2:hover {
    background-color: transparent;
  }
}

@media (hover:none) {
  .c3:hover {
    background-color: transparent;
  }
}

<div
    className="c0 sinoui-checkbox-group sinoui-form-group"
    onChange={[Function]}
  >
    <label
      className="sc-AxgMl c1 sinoui-form-control-label"
    >
      <span
        checked={false}
        className="c2 sinoui-base-button c3 sinoui-radio"
        color="primary"
        onClick={[Function]}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="c4 sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="c5 sinoui-radio__input"
          onChange={[Function]}
          type="radio"
          value="1"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框1
      </span>
    </label>
    <label
      className="sc-AxgMl c1 sinoui-form-control-label"
    >
      <span
        checked={false}
        className="c2 sinoui-base-button c3 sinoui-radio"
        color="primary"
        onClick={[Function]}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="c4 sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="c5 sinoui-radio__input"
          onChange={[Function]}
          type="radio"
          value="2"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框2
      </span>
    </label>
    <label
      className="sc-AxgMl c1 sinoui-form-control-label"
    >
      <span
        checked={false}
        className="c2 sinoui-base-button c3 sinoui-radio"
        color="primary"
        onClick={[Function]}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="c4 sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
          className="c5 sinoui-radio__input"
          onChange={[Function]}
          type="radio"
          value="3"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框3
      </span>
    </label>
  </div>,
]
`;

exports[`radioGroup组件 快照测试 设置纵向排列 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 > label {
  padding-right: 8px;
}

.c0 > label:last-child {
  padding-right: 0px;
}

.c0 > label {
  width: 100%;
}

.c0 > label {
  -webkit-transform: translate(-11px,0px);
  -ms-transform: translate(-11px,0px);
  transform: translate(-11px,0px);
}

.c1 {
  font-size: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  font-weight: 400;
  color: rgba(0,0,0,0.87);
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
  box-sizing: border-box;
  cursor: pointer;
}

.c1 > .sinoui-checkbox,
.c1 > .sinoui-radio {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c1 > .sinoui-form-control-label__title {
  word-break: break-all;
  word-wrap: break-word;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 1.5;
  padding: 4px 0px;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0px;
  padding: 0px;
  margin: 0;
  border-radius: 0;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  pointer-events: default;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2::-moz-focus-inner {
  border-style: none;
}

.c2:hover {
  background-color: rgba(0,0,0,0.04);
}

.c4 {
  font-size: 24px;
  width: 1em;
  height: 1em;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
}

.c3 {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  color: rgba(0,0,0,0.6);
}

.c3 > .sinoui-icon,
.c3 > .sinoui-svg-icon {
  font-size: 20px;
}

.c3.sinoui-radio--disabled {
  color: rgba(0,0,0,0.38);
}

.c3.sinoui-radio--readOnly {
  color: rgba(0,0,0,0.38);
}

.c3 .sinoui-radio__ripple {
  width: 40px;
  height: 40px;
  border-radius: 50%;
}

.c3 .sinoui-radio__ripple-layout {
  width: 40px;
  height: 40px;
}

.c3:hover {
  background-color: rgba(0,0,0,0.04);
}

.c3:focus {
  background-color: rgba(63,81,181,0.04);
}

.c3.sinoui-radio--dense {
  height: 32px;
  width: 32px;
}

.c3.sinoui-radio--dense .sinoui-radio__ripple {
  width: 32px;
  height: 32px;
  border-radius: 50%;
}

.c3.sinoui-radio--dense .sinoui-radio__ripple-layout {
  width: 32px;
  height: 32px;
}

.c5 {
  cursor: inherit;
  position: absolute;
  opacity: 0;
  width: 100%;
  height: 100%;
  top: 0px;
  left: 0px;
  margin: 0px;
  padding: 0px;
  border: none;
}

@media (hover:none) {
  .c2:hover {
    background-color: transparent;
  }
}

@media (hover:none) {
  .c3:hover {
    background-color: transparent;
  }
}

<div
  className="c0 sinoui-checkbox-group sinoui-form-group"
  onChange={[Function]}
>
  <label
    className="sc-AxgMl c1 sinoui-form-control-label"
  >
    <span
      checked={false}
      className="c2 sinoui-base-button c3 sinoui-radio"
      color="primary"
      onClick={[Function]}
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="c4 sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        checked={false}
        className="c5 sinoui-radio__input"
        onChange={[Function]}
        type="radio"
        value="1"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框1
    </span>
  </label>
  <label
    className="sc-AxgMl c1 sinoui-form-control-label"
  >
    <span
      checked={false}
      className="c2 sinoui-base-button c3 sinoui-radio"
      color="primary"
      onClick={[Function]}
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="c4 sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        checked={false}
        className="c5 sinoui-radio__input"
        onChange={[Function]}
        type="radio"
        value="2"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框2
    </span>
  </label>
  <label
    className="sc-AxgMl c1 sinoui-form-control-label"
  >
    <span
      checked={false}
      className="c2 sinoui-base-button c3 sinoui-radio"
      color="primary"
      onClick={[Function]}
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="c4 sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        checked={false}
        className="c5 sinoui-radio__input"
        onChange={[Function]}
        type="radio"
        value="3"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框3
    </span>
  </label>
  <label
    className="sc-AxgMl c1 sinoui-form-control-label"
  >
    <span
      checked={false}
      className="c2 sinoui-base-button c3 sinoui-radio"
      color="primary"
      onClick={[Function]}
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="c4 sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        checked={false}
        className="c5 sinoui-radio__input"
        onChange={[Function]}
        type="radio"
        value="4"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框4
    </span>
  </label>
</div>
`;
